test/errors/undefined_function.dmd
add(4, 5)

--- Output
Undefined function

add is not defined.

1| add(4, 5)
   ^^^
---
